--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.7",
+    "@tailwindcss/vite": "^4.0.7",
     "electron-squirrel-startup": "^1.0.1",
-    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.7",
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.0",
     "@electron-forge/cli": "^7.7.0",
@@ -49,6 +48,7 @@
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron/fuses": "^1.8.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "electron": "^34.2.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -56,6 +56,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.7",
     "typescript": "~5.7.2"
   }
 }
