--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.0",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/router": "^19.1.0",
+    "@angular/animations": "^19.1.7",
+    "@angular/cdk": "^19.1.5",
+    "@angular/common": "^19.1.7",
+    "@angular/compiler": "^19.1.7",
+    "@angular/core": "^19.1.7",
+    "@angular/forms": "^19.1.7",
+    "@angular/material": "^19.1.5",
+    "@angular/platform-browser": "^19.1.7",
+    "@angular/platform-browser-dynamic": "^19.1.7",
+    "@angular/router": "^19.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "electron-squirrel-startup": "^1.0.1",
@@ -37,8 +39,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
-    "@angular/cli": "^19.1.7",
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular/cli": "^19.1.8",
+    "@angular/compiler-cli": "^19.1.7",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-deb": "^7.7.0",
     "@electron-forge/maker-rpm": "^7.7.0",
@@ -57,7 +59,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.7",
+    "tailwindcss": "^4",
     "typescript": "~5.7.2"
   }
 }
