--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aspirantes-beneficio",
   "version": "0.0.0",
-  "description": "Lorem",
+  "description": "Aplicación para capturar la información y fotografia del aspirante a beneficiario",
   "author": "Tisa",
   "main": "main.js",
   "scripts": {
@@ -12,13 +12,22 @@
     "test": "ng test",
     "electron": "electron main.js",
     "electron-build": "ng build --prod && electron main.js",
-    "electron-start": "electron-forge start",
-    "electron-package": "electron-forge package",
-    "electron-make": "electron-forge make",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
   "private": true,
+  "build": {
+    "appId": "com.tisa.aspirantesbeneficio",
+    "productName": "Aspirantes Beneficio",
+    "win": {
+      "target": "nsis",
+      "icon": "src/assets/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
   "dependencies": {
     "@angular/animations": "^19.1.0",
     "@angular/common": "^19.1.0",
@@ -34,6 +43,7 @@
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.3.0",
+    "update-electron-app": "^3.1.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -47,6 +57,7 @@
     "@electron-forge/maker-zip": "^7.7.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
     "@electron-forge/plugin-fuses": "^7.7.0",
+    "@electron-forge/publisher-github": "^7.7.0",
     "@electron/fuses": "^1.8.0",
     "@types/jasmine": "~5.1.0",
     "electron": "^34.2.0",
