--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/router": "^19.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
+    "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
