--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "@angular/router": "^19.1.7",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
+    "@types/better-sqlite3": "^7.6.12",
+    "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "update-electron-app": "^3.1.1",
@@ -66,6 +69,7 @@
     "@electron-forge/publisher-github": "^7.7.0",
     "@electron/fuses": "^1.8.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
     "electron": "^34.2.0",
     "jasmine-core": "~5.5.0",
