--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
     "update-electron-app": "^3.1.1",
     "zone.js": "~0.15.0"
