se insertan los usuarios con Password Encriptado a la base de datos local

--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron-forge/publisher-github": "^7.7.0",
     "@electron/fuses": "^1.8.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
+    "crypto-js": "^4.2.0",
     "electron": "^34.2.0",
     "electron-rebuild": "^3.2.9",
     "jasmine-core": "~5.5.0",
