--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aspirantes-beneficio",
-  "version": "0.0.7",
+  "version": "0.0.10",
   "productName": "Aspirantes Beneficio",
   "description": "Aplicación para capturar la información y fotografia del aspirante a beneficiario",
   "author": "TISA",
@@ -50,10 +50,13 @@
     "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "pdfjs": "^2.5.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
     "update-electron-app": "^3.1.1",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
