--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
