--- a/package.json
+++ b/package.json
@@ -47,11 +47,15 @@
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "@types/better-sqlite3": "^7.6.12",
+    "axios": "^1.8.3",
     "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
+    "pdfkit": "^0.16.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
