--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ng": "ng",
     "start": "electron-forge start",
     "build": "ng build",
+    "build-dev": "ng build --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "electron": "electron main.js",
