--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pdfkit": "^0.16.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
+    "systeminformation": "^5.25.11",
     "tslib": "^2.3.0",
     "update-electron-app": "^3.1.1",
     "xlsx": "^0.18.5",
