--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build-dev": "ng build --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "electron main.js",
+    "electron": "electron .",
     "electron-build": "ng build --prod && electron main.js",
     "package": "electron-forge package",
     "make": "electron-forge make"
@@ -83,7 +83,7 @@
     "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
     "crypto-js": "^4.2.0",
-    "electron": "^34.2.0",
+    "electron": "^34.5.1",
     "electron-rebuild": "^3.2.9",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
