--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "@types/better-sqlite3": "^7.6.12",
+    "animate.css": "^4.1.1",
     "axios": "^1.8.3",
     "better-sqlite3": "^11.8.1",
+    "chart.js": "^4.4.9",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "ng2-charts": "^8.0.0",
     "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
     "pdfkit": "^0.16.0",
