--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
+    "pdf-lib": "^1.17.1",
     "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
     "pdfkit": "^0.16.0",
@@ -88,6 +89,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
+    "canvas": "^3.1.0",
     "crypto-js": "^4.2.0",
     "electron": "^34.5.1",
     "electron-rebuild": "^3.2.9",
