--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "electron-build": "ng build --prod && electron main.js",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "build-start": "ng build --configuration production && electron ."
+    "build-start": "ng build --configuration production && electron .",
+    "build-devs": "ng build --configuration development && electron ."
   },
   "private": true,
   "build": {
@@ -46,6 +47,7 @@
     "@angular/platform-browser": "^19.1.7",
     "@angular/platform-browser-dynamic": "^19.1.7",
     "@angular/router": "^19.1.7",
+    "@electron/remote": "^2.1.2",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "@types/better-sqlite3": "^7.6.12",
@@ -58,6 +60,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
+    "pdf-lib": "^1.17.1",
     "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
     "pdfkit": "^0.16.0",
@@ -86,6 +89,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
+    "canvas": "^3.1.0",
     "crypto-js": "^4.2.0",
     "electron": "^34.5.1",
     "electron-rebuild": "^3.2.9",
