--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aspirantes-beneficio",
-  "version": "1.0.6",
+  "version": "1.0.9",
   "productName": "Aspirantes Beneficio",
   "description": "Aplicación para capturar la información y fotografia del aspirante a beneficiario",
   "author": "TISA",
@@ -20,12 +20,23 @@
     "electron-build": "ng build --prod && electron main.js",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "build-start": "ng build --configuration production && electron ."
+    "build-start": "ng build --configuration production && electron .",
+    "build-devs": "ng build --configuration development && electron .",
+    "sumatra": "copy tools\\SumatraPDF.exe node_modules\\electron\\dist\\resources\\"
   },
   "private": true,
   "build": {
     "appId": "com.tisa.aspirantesbeneficio",
     "productName": "Aspirantes Beneficio",
+    "extraFiles": [
+      {
+        "from": "tools/SumatraPDF.exe",
+        "to": "resources/SumatraPDF.exe",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
     "win": {
       "target": "nsis",
       "icon": "src/assets/icon.ico"
@@ -46,18 +57,18 @@
     "@angular/platform-browser": "^19.1.7",
     "@angular/platform-browser-dynamic": "^19.1.7",
     "@angular/router": "^19.1.7",
+    "@electron/remote": "^2.1.2",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
     "@types/better-sqlite3": "^7.6.12",
-    "animate.css": "^4.1.1",
     "axios": "^1.8.3",
     "better-sqlite3": "^11.8.1",
-    "chart.js": "^4.4.9",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
+    "pdf-lib": "^1.17.1",
     "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
     "pdfkit": "^0.16.0",
@@ -86,6 +97,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
+    "canvas": "^3.1.0",
     "crypto-js": "^4.2.0",
     "electron": "^34.5.1",
     "electron-rebuild": "^3.2.9",
