--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@electron/remote": "^2.1.2",
     "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.7",
-    "@types/better-sqlite3": "^7.6.12",
     "axios": "^1.8.3",
     "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
@@ -72,6 +71,7 @@
     "pdf-to-printer": "^5.6.0",
     "pdfjs": "^2.5.3",
     "pdfkit": "^0.16.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
     "systeminformation": "^5.25.11",
@@ -93,9 +93,11 @@
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron-forge/publisher-github": "^7.7.0",
     "@electron/fuses": "^1.8.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.13.5",
+    "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.20",
     "canvas": "^3.1.0",
     "crypto-js": "^4.2.0",
