--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
